--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "3.1.2",
     "moment": "2.29.4",
     "prettier": "2.7.1",
+    "query-string": "^9.1.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
